# DCT2_Image_Compression_C

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
fftw-3.3.8/: ChangeLog  INSTALL  NEWS
fftw-3.3.8/doc/: fftw3.info-1  intro.texi  mpi.texi  reference.texi  texinfo.tex  tutorial.texi
fftw-3.3.8/doc/FAQ/: fftw-faq.ascii  fftw-faq.bfnn
fftw-3.3.8/doc/FAQ/fftw-faq.html/: index.html  section3.html  section5.html
fftw-3.3.8/doc/html/: 1d-Real_002deven-DFTs-_0028DCTs_0029.html  1d-Real_002dodd-DFTs-_0028DSTs_0029.html  Complex-One_002dDimensional-DFTs.html  Multi_002ddimensional-Transforms.html  Real-even_002fodd-DFTs-_0028cosine_002fsine-transforms_0029.html  Transposed-distributions.html
fftw-3.3.8/libbench2/: bench-main.c
fftw-3.3.8/m4/: libtool.m4
fftw-3.3.8/rdft/: ct-hc2c-direct.c
fftw-3.3.8/reodft/: reodft00e-splitradix.c
gui/: CMakeLists.txt  gui_it_IT.ts
src/: DCT2.h  main.cpp
src/DCT2/: DCT.cpp  DCT2.cpp  DCT2.h
src/timing/: Timing.cpp  Timing.h
src/transforms/: DCT.cpp  DCT.h  FFT.cpp  FFT.h
